[gd_scene load_steps=2 format=3 uid="uid://bq1b3m5yfg0k3"]

[ext_resource type="Script" uid="uid://dg5qaotfk3xof" path="res://scripts/board_ui/edit.gd" id="1_1gqxl"]

[node name="Edit" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_right = -842.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_1gqxl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ObjectNameText" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Edit Creature Data"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Str" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Str"]
layout_mode = 2
text = "STR"
horizontal_alignment = 1

[node name="StrData" type="Label" parent="VBoxContainer/StatsContainer/Str"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "14"
horizontal_alignment = 1

[node name="Dex" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Dex"]
layout_mode = 2
text = "DEX"
horizontal_alignment = 1

[node name="DexData" type="Label" parent="VBoxContainer/StatsContainer/Dex"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "13"
horizontal_alignment = 1

[node name="Con" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Con"]
layout_mode = 2
text = "CON"
horizontal_alignment = 1

[node name="ConData" type="Label" parent="VBoxContainer/StatsContainer/Con"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "11"
horizontal_alignment = 1

[node name="Int" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Int"]
layout_mode = 2
text = "INT"
horizontal_alignment = 1

[node name="IntData" type="Label" parent="VBoxContainer/StatsContainer/Int"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "15"
horizontal_alignment = 1

[node name="Wis" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Wis"]
layout_mode = 2
text = "WIS"
horizontal_alignment = 1

[node name="WisData" type="Label" parent="VBoxContainer/StatsContainer/Wis"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "10"
horizontal_alignment = 1

[node name="Cha" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/StatsContainer/Cha"]
layout_mode = 2
text = "CHA"
horizontal_alignment = 1

[node name="ChaData" type="Label" parent="VBoxContainer/StatsContainer/Cha"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "14"
horizontal_alignment = 1

[node name="ModelPositionContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ModelPositionLabel" type="Label" parent="VBoxContainer/ModelPositionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Model Position"

[node name="ModelX" type="SpinBox" parent="VBoxContainer/ModelPositionContainer"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
prefix = "x"
suffix = "m"
select_all_on_focus = true

[node name="ModelY" type="SpinBox" parent="VBoxContainer/ModelPositionContainer"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
prefix = "y"
suffix = "m"
select_all_on_focus = true

[node name="ModelZ" type="SpinBox" parent="VBoxContainer/ModelPositionContainer"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
prefix = "z"
suffix = "m"
select_all_on_focus = true

[node name="BaseScaleContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="BaseScaleLabel" type="Label" parent="VBoxContainer/BaseScaleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Base Scale"

[node name="BaseScaleX" type="SpinBox" parent="VBoxContainer/BaseScaleContainer"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
prefix = "x"
suffix = "m "
select_all_on_focus = true

[node name="BaseScaleY" type="SpinBox" parent="VBoxContainer/BaseScaleContainer"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
prefix = "y"
suffix = "m "
select_all_on_focus = true

[node name="BaseScaleZ" type="SpinBox" parent="VBoxContainer/BaseScaleContainer"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
prefix = "z"
suffix = "m "
select_all_on_focus = true

[node name="RotationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rotation Degrees (0Â°)"
horizontal_alignment = 1

[node name="RotationSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 360.0
rounded = true
tick_count = 9
ticks_on_borders = true
ticks_position = 3

[node name="ToggleBaseVisibility" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Base Visibile"

[node name="CreatureConditionRings" type="FoldableContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
title = "Status Rings"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CreatureConditionRings"]
layout_mode = 2

[node name="RedRingToggle" type="CheckBox" parent="VBoxContainer/CreatureConditionRings/VBoxContainer"]
layout_mode = 2
text = "Red"

[node name="OrangeRingToggle" type="CheckBox" parent="VBoxContainer/CreatureConditionRings/VBoxContainer"]
layout_mode = 2
text = "Orange"

[node name="YellowRingToggle" type="CheckBox" parent="VBoxContainer/CreatureConditionRings/VBoxContainer"]
layout_mode = 2
text = "Yellow"

[node name="GreenRingToggle" type="CheckBox" parent="VBoxContainer/CreatureConditionRings/VBoxContainer"]
layout_mode = 2
text = "Green"

[node name="BlueRingToggle" type="CheckBox" parent="VBoxContainer/CreatureConditionRings/VBoxContainer"]
layout_mode = 2
text = "Blue"

[node name="PurpleRingToggle" type="CheckBox" parent="VBoxContainer/CreatureConditionRings/VBoxContainer"]
layout_mode = 2
text = "Purple"

[node name="PinkRingToggle" type="CheckBox" parent="VBoxContainer/CreatureConditionRings/VBoxContainer"]
layout_mode = 2
text = "Pink"

[node name="WhiteRingToggle" type="CheckBox" parent="VBoxContainer/CreatureConditionRings/VBoxContainer"]
layout_mode = 2
text = "White"

[connection signal="value_changed" from="VBoxContainer/ModelPositionContainer/ModelX" to="." method="_on_model_x_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ModelPositionContainer/ModelY" to="." method="_on_model_y_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ModelPositionContainer/ModelZ" to="." method="_on_model_z_value_changed"]
[connection signal="value_changed" from="VBoxContainer/BaseScaleContainer/BaseScaleX" to="." method="_on_base_scale_x_value_changed"]
[connection signal="value_changed" from="VBoxContainer/BaseScaleContainer/BaseScaleY" to="." method="_on_base_scale_y_value_changed"]
[connection signal="value_changed" from="VBoxContainer/BaseScaleContainer/BaseScaleZ" to="." method="_on_base_scale_z_value_changed"]
[connection signal="value_changed" from="VBoxContainer/RotationSlider" to="." method="_on_rotation_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/ToggleBaseVisibility" to="." method="_on_toggle_base_visibility_toggled"]
